--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@inquirer/select": "^1.2.11",
     "commander": "^11.0.0",
     "gopay-sdk": "git+ssh://github.com/subekti404dev/gopay-sdk",
+    "lodash.uniqby": "^4.7.0",
     "node-localstorage": "^3.0.5"
   }
 }
